<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewBTDeviceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewBTDeviceLabel"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/spinnerBluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/buttonBitalinoConf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonBitalinoConf" />

        <Button
            android:id="@+id/buttonLaunchStoreFiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonLaunchStoreFiles" />

        <CheckBox
            android:id="@+id/checkBoxSD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxSD" />

        <Chronometer
            android:id="@+id/chronometer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="50dp"
            android:padding="20dp"
            android:text="@string/chronometer1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textViewFramesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewFramesLabel" />

            <TextView
                android:id="@+id/textViewFrames"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:text="@string/textViewFrames" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/TextViewFileLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewFileLabel" />

            <TextView
                android:id="@+id/TextViewFileName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:text="@string/textViewFileDefaultName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:paddingTop="30dp" >

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonStart" />

            <Button
                android:id="@+id/buttonStop"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonStop" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>