<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >


            <TextView
                android:id="@+id/textViewLogIndexLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewLogIndexLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/spinnerFiles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/ButtonSendLog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.31"    
               	    android:text="@string/buttonSendLog"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                   />

                <Button
                    android:id="@+id/ButtonDeleteLog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"    
                    android:text="@string/buttonDeleteLog"
                    android:textAppearance="?android:attr/textAppearanceLarge" 
                  />
                
            </LinearLayout>


</LinearLayout>
